--- a/views/date.erb
+++ b/views/date.erb
@@ -1,6 +1,6 @@
 <html>
   <body>
-    <h1> The date is Wednesday, November 18, 2015 <%time.now%></h1>
+    <h1> The date is Wednesday, November 18, 2015 <%Time.now%> </h1>
 
   </body>
 </html>
