automatically backed up by learn

--- a/views/date.erb
+++ b/views/date.erb
@@ -1,6 +1,7 @@
 <html>
   <body>
-    <h1> The date is Wednesday, November 18, 2015 <%Time.now%> </h1>
+    <%time=Time.now%>
+    <h1> The date is Wednesday, November 18, 2015 <%=time<%>  </h1>
 
   </body>
 </html>
