--- a/views/date.erb
+++ b/views/date.erb
@@ -1,6 +1,6 @@
 <html>
   <body>
-    <%=time=Time.now%>
+    <%=time=DateTime.now%>
     <h1> The date is Wednesday, November 18, 2015 <%=time<%>  </h1>
 
   </body>
