automatically backed up by learn

--- a/views/date.erb
+++ b/views/date.erb
@@ -1,7 +1,7 @@
 <html>
   <body>
     <%=time=DateTime.now%>
-    <h1> The date is Wednesday, November 18, 2015 <%=time<%>  </h1>
+    <h1> The date is Wednesday, November 18, 2015 <%=time%>  </h1>
 
   </body>
 </html>
