automatically backed up by learn

--- a/views/date.erb
+++ b/views/date.erb
@@ -2,7 +2,7 @@
   <body>
     <%current_time = Date.today%>
     <%cdt = current_time.strftime("%A, %B %d, %Y")%>
-    <h1> The date is Wednesday, November 18, 2015 <%=current_time%>  </h1>
+    <h1> The date is <%=current_time%>  </h1>
 
   </body>
 </html>
