--- a/views/date.erb
+++ b/views/date.erb
@@ -1,8 +1,6 @@
 <html>
   <body>
-    <%current_time = Date.today%>
-    <%cdt = current_time.strftime("%A, %B %d, %Y")%>
-    <h1> The date is <%=current_time%>  </h1>
+<p> The date is <%= Date.today.strftime("%A, %B %d, %Y") %></p>
 
   </body>
 </html>
