--- a/views/date.erb
+++ b/views/date.erb
@@ -1,6 +1,9 @@
 <html>
   <body>
-<p> The date is <%= Date.today.strftime("%A, %B %d, %Y") %></p>
+    <%current_time = Date.today%>
+    <%cdt = current_time.strftime("%A, %B %d, %Y")%>
+    <h1> The date is <%=cdt%>  </h1>
+
 
   </body>
 </html>
